Agiil.QueryLanguage.Antlr/Generated_JavaScript/AgiilQueryParser.js
// Generated from /home/craig/Projects/Agiil/Agiil.QueryLanguage.Antlr/AgiilQuery.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var AgiilQueryVisitor = require('./AgiilQueryVisitor').AgiilQueryVisitor;

var grammarFileName = "AgiilQuery.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'\uFEFF'", "'('", "')'", "'='", "'!='", "'~'", 
                     "','", "'\"'", "'>'", "'<'", "'>='", "'<='" ];

var symbolicNames = [ null, "BOM", "OPENPAREN", "CLOSEPAREN", "EQUALS", 
                      "NOTEQUALS", "TILDE", "COMMA", "DOUBLEQUOTE", "GREATERTHAN", 
                      "LESSTHAN", "GREATERTHANOREQUAL", "LESSTHANOREQUAL", 
                      "WHITESPACE", "NOT", "AND", "OR", "ORDERBY", "DESCENDING", 
                      "ASCENDING", "NAME", "WORD", "QUOTEDVALUE", "ANY" ];

var ruleNames =  [ "search", "criteria", "logicalcriteriagroups", "criterionorgroup", 
                   "criteriagroup", "criterion", "elementtest", "logicaloperator", 
                   "element", "predicate", "predicatename", "comparison", 
                   "value", "constantvalue", "functioninvocation", "functionparameters", 
                   "orders", "orderelement" ];

function AgiilQueryParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

AgiilQueryParser.prototype = Object.create(antlr4.Parser.prototype);
AgiilQueryParser.prototype.constructor = AgiilQueryParser;

Object.defineProperty(AgiilQueryParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

AgiilQueryParser.EOF = antlr4.Token.EOF;
AgiilQueryParser.BOM = 1;
AgiilQueryParser.OPENPAREN = 2;
AgiilQueryParser.CLOSEPAREN = 3;
AgiilQueryParser.EQUALS = 4;
AgiilQueryParser.NOTEQUALS = 5;
AgiilQueryParser.TILDE = 6;
AgiilQueryParser.COMMA = 7;
AgiilQueryParser.DOUBLEQUOTE = 8;
AgiilQueryParser.GREATERTHAN = 9;
AgiilQueryParser.LESSTHAN = 10;
AgiilQueryParser.GREATERTHANOREQUAL = 11;
AgiilQueryParser.LESSTHANOREQUAL = 12;
AgiilQueryParser.WHITESPACE = 13;
AgiilQueryParser.NOT = 14;
AgiilQueryParser.AND = 15;
AgiilQueryParser.OR = 16;
AgiilQueryParser.ORDERBY = 17;
AgiilQueryParser.DESCENDING = 18;
AgiilQueryParser.ASCENDING = 19;
AgiilQueryParser.NAME = 20;
AgiilQueryParser.WORD = 21;
AgiilQueryParser.QUOTEDVALUE = 22;
AgiilQueryParser.ANY = 23;

AgiilQueryParser.RULE_search = 0;
AgiilQueryParser.RULE_criteria = 1;
AgiilQueryParser.RULE_logicalcriteriagroups = 2;
AgiilQueryParser.RULE_criterionorgroup = 3;
AgiilQueryParser.RULE_criteriagroup = 4;
AgiilQueryParser.RULE_criterion = 5;
AgiilQueryParser.RULE_elementtest = 6;
AgiilQueryParser.RULE_logicaloperator = 7;
AgiilQueryParser.RULE_element = 8;
AgiilQueryParser.RULE_predicate = 9;
AgiilQueryParser.RULE_predicatename = 10;
AgiilQueryParser.RULE_comparison = 11;
AgiilQueryParser.RULE_value = 12;
AgiilQueryParser.RULE_constantvalue = 13;
AgiilQueryParser.RULE_functioninvocation = 14;
AgiilQueryParser.RULE_functionparameters = 15;
AgiilQueryParser.RULE_orders = 16;
AgiilQueryParser.RULE_orderelement = 17;

function SearchContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_search;
    return this;
}

SearchContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SearchContext.prototype.constructor = SearchContext;

SearchContext.prototype.EOF = function() {
    return this.getToken(AgiilQueryParser.EOF, 0);
};

SearchContext.prototype.BOM = function() {
    return this.getToken(AgiilQueryParser.BOM, 0);
};

SearchContext.prototype.criteria = function() {
    return this.getTypedRuleContext(CriteriaContext,0);
};

SearchContext.prototype.orders = function() {
    return this.getTypedRuleContext(OrdersContext,0);
};

SearchContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitSearch(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.SearchContext = SearchContext;

AgiilQueryParser.prototype.search = function() {

    var localctx = new SearchContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, AgiilQueryParser.RULE_search);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 37;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===AgiilQueryParser.BOM) {
            this.state = 36;
            this.match(AgiilQueryParser.BOM);
        }

        this.state = 40;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===AgiilQueryParser.OPENPAREN || _la===AgiilQueryParser.NAME) {
            this.state = 39;
            this.criteria();
        }

        this.state = 43;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===AgiilQueryParser.ORDERBY) {
            this.state = 42;
            this.orders();
        }

        this.state = 45;
        this.match(AgiilQueryParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CriteriaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_criteria;
    return this;
}

CriteriaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CriteriaContext.prototype.constructor = CriteriaContext;

CriteriaContext.prototype.logicalcriteriagroups = function() {
    return this.getTypedRuleContext(LogicalcriteriagroupsContext,0);
};

CriteriaContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitCriteria(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.CriteriaContext = CriteriaContext;

AgiilQueryParser.prototype.criteria = function() {

    var localctx = new CriteriaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, AgiilQueryParser.RULE_criteria);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 47;
        this.logicalcriteriagroups();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LogicalcriteriagroupsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_logicalcriteriagroups;
    return this;
}

LogicalcriteriagroupsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LogicalcriteriagroupsContext.prototype.constructor = LogicalcriteriagroupsContext;

LogicalcriteriagroupsContext.prototype.criterionorgroup = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CriterionorgroupContext);
    } else {
        return this.getTypedRuleContext(CriterionorgroupContext,i);
    }
};

LogicalcriteriagroupsContext.prototype.logicaloperator = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LogicaloperatorContext);
    } else {
        return this.getTypedRuleContext(LogicaloperatorContext,i);
    }
};

LogicalcriteriagroupsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitLogicalcriteriagroups(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.LogicalcriteriagroupsContext = LogicalcriteriagroupsContext;

AgiilQueryParser.prototype.logicalcriteriagroups = function() {

    var localctx = new LogicalcriteriagroupsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, AgiilQueryParser.RULE_logicalcriteriagroups);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 49;
        this.criterionorgroup();
        this.state = 56;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AgiilQueryParser.OPENPAREN) | (1 << AgiilQueryParser.AND) | (1 << AgiilQueryParser.OR) | (1 << AgiilQueryParser.NAME))) !== 0)) {
            this.state = 51;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===AgiilQueryParser.AND || _la===AgiilQueryParser.OR) {
                this.state = 50;
                this.logicaloperator();
            }

            this.state = 53;
            this.criterionorgroup();
            this.state = 58;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CriterionorgroupContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_criterionorgroup;
    return this;
}

CriterionorgroupContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CriterionorgroupContext.prototype.constructor = CriterionorgroupContext;

CriterionorgroupContext.prototype.criterion = function() {
    return this.getTypedRuleContext(CriterionContext,0);
};

CriterionorgroupContext.prototype.criteriagroup = function() {
    return this.getTypedRuleContext(CriteriagroupContext,0);
};

CriterionorgroupContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitCriterionorgroup(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.CriterionorgroupContext = CriterionorgroupContext;

AgiilQueryParser.prototype.criterionorgroup = function() {

    var localctx = new CriterionorgroupContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, AgiilQueryParser.RULE_criterionorgroup);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 61;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case AgiilQueryParser.NAME:
            this.state = 59;
            this.criterion();
            break;
        case AgiilQueryParser.OPENPAREN:
            this.state = 60;
            this.criteriagroup();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CriteriagroupContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_criteriagroup;
    return this;
}

CriteriagroupContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CriteriagroupContext.prototype.constructor = CriteriagroupContext;

CriteriagroupContext.prototype.OPENPAREN = function() {
    return this.getToken(AgiilQueryParser.OPENPAREN, 0);
};

CriteriagroupContext.prototype.logicalcriteriagroups = function() {
    return this.getTypedRuleContext(LogicalcriteriagroupsContext,0);
};

CriteriagroupContext.prototype.CLOSEPAREN = function() {
    return this.getToken(AgiilQueryParser.CLOSEPAREN, 0);
};

CriteriagroupContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitCriteriagroup(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.CriteriagroupContext = CriteriagroupContext;

AgiilQueryParser.prototype.criteriagroup = function() {

    var localctx = new CriteriagroupContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, AgiilQueryParser.RULE_criteriagroup);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this.match(AgiilQueryParser.OPENPAREN);
        this.state = 64;
        this.logicalcriteriagroups();
        this.state = 65;
        this.match(AgiilQueryParser.CLOSEPAREN);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CriterionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_criterion;
    return this;
}

CriterionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CriterionContext.prototype.constructor = CriterionContext;

CriterionContext.prototype.element = function() {
    return this.getTypedRuleContext(ElementContext,0);
};

CriterionContext.prototype.elementtest = function() {
    return this.getTypedRuleContext(ElementtestContext,0);
};

CriterionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitCriterion(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.CriterionContext = CriterionContext;

AgiilQueryParser.prototype.criterion = function() {

    var localctx = new CriterionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, AgiilQueryParser.RULE_criterion);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 67;
        this.element();
        this.state = 68;
        this.elementtest();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ElementtestContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_elementtest;
    return this;
}

ElementtestContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ElementtestContext.prototype.constructor = ElementtestContext;

ElementtestContext.prototype.predicate = function() {
    return this.getTypedRuleContext(PredicateContext,0);
};

ElementtestContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};

ElementtestContext.prototype.functioninvocation = function() {
    return this.getTypedRuleContext(FunctioninvocationContext,0);
};

ElementtestContext.prototype.NOT = function() {
    return this.getToken(AgiilQueryParser.NOT, 0);
};

ElementtestContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitElementtest(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.ElementtestContext = ElementtestContext;

AgiilQueryParser.prototype.elementtest = function() {

    var localctx = new ElementtestContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, AgiilQueryParser.RULE_elementtest);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 77;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        switch(la_) {
        case 1:
            this.state = 70;
            this.predicate();
            this.state = 71;
            this.value();
            break;

        case 2:
            this.state = 74;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===AgiilQueryParser.NOT) {
                this.state = 73;
                this.match(AgiilQueryParser.NOT);
            }

            this.state = 76;
            this.functioninvocation();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LogicaloperatorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_logicaloperator;
    return this;
}

LogicaloperatorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LogicaloperatorContext.prototype.constructor = LogicaloperatorContext;

LogicaloperatorContext.prototype.AND = function() {
    return this.getToken(AgiilQueryParser.AND, 0);
};

LogicaloperatorContext.prototype.OR = function() {
    return this.getToken(AgiilQueryParser.OR, 0);
};

LogicaloperatorContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitLogicaloperator(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.LogicaloperatorContext = LogicaloperatorContext;

AgiilQueryParser.prototype.logicaloperator = function() {

    var localctx = new LogicaloperatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, AgiilQueryParser.RULE_logicaloperator);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 79;
        _la = this._input.LA(1);
        if(!(_la===AgiilQueryParser.AND || _la===AgiilQueryParser.OR)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ElementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_element;
    return this;
}

ElementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ElementContext.prototype.constructor = ElementContext;

ElementContext.prototype.NAME = function() {
    return this.getToken(AgiilQueryParser.NAME, 0);
};

ElementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitElement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.ElementContext = ElementContext;

AgiilQueryParser.prototype.element = function() {

    var localctx = new ElementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, AgiilQueryParser.RULE_element);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 81;
        this.match(AgiilQueryParser.NAME);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PredicateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_predicate;
    return this;
}

PredicateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PredicateContext.prototype.constructor = PredicateContext;

PredicateContext.prototype.predicatename = function() {
    return this.getTypedRuleContext(PredicatenameContext,0);
};

PredicateContext.prototype.NOT = function() {
    return this.getToken(AgiilQueryParser.NOT, 0);
};

PredicateContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitPredicate(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.PredicateContext = PredicateContext;

AgiilQueryParser.prototype.predicate = function() {

    var localctx = new PredicateContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, AgiilQueryParser.RULE_predicate);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===AgiilQueryParser.NOT) {
            this.state = 83;
            this.match(AgiilQueryParser.NOT);
        }

        this.state = 86;
        this.predicatename();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PredicatenameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_predicatename;
    return this;
}

PredicatenameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PredicatenameContext.prototype.constructor = PredicatenameContext;

PredicatenameContext.prototype.EQUALS = function() {
    return this.getToken(AgiilQueryParser.EQUALS, 0);
};

PredicatenameContext.prototype.NOTEQUALS = function() {
    return this.getToken(AgiilQueryParser.NOTEQUALS, 0);
};

PredicatenameContext.prototype.TILDE = function() {
    return this.getToken(AgiilQueryParser.TILDE, 0);
};

PredicatenameContext.prototype.NAME = function() {
    return this.getToken(AgiilQueryParser.NAME, 0);
};

PredicatenameContext.prototype.comparison = function() {
    return this.getTypedRuleContext(ComparisonContext,0);
};

PredicatenameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitPredicatename(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.PredicatenameContext = PredicatenameContext;

AgiilQueryParser.prototype.predicatename = function() {

    var localctx = new PredicatenameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, AgiilQueryParser.RULE_predicatename);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case AgiilQueryParser.EQUALS:
            this.state = 88;
            this.match(AgiilQueryParser.EQUALS);
            break;
        case AgiilQueryParser.NOTEQUALS:
            this.state = 89;
            this.match(AgiilQueryParser.NOTEQUALS);
            break;
        case AgiilQueryParser.TILDE:
            this.state = 90;
            this.match(AgiilQueryParser.TILDE);
            break;
        case AgiilQueryParser.NAME:
            this.state = 91;
            this.match(AgiilQueryParser.NAME);
            break;
        case AgiilQueryParser.GREATERTHAN:
        case AgiilQueryParser.LESSTHAN:
        case AgiilQueryParser.GREATERTHANOREQUAL:
        case AgiilQueryParser.LESSTHANOREQUAL:
            this.state = 92;
            this.comparison();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ComparisonContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_comparison;
    return this;
}

ComparisonContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ComparisonContext.prototype.constructor = ComparisonContext;

ComparisonContext.prototype.GREATERTHAN = function() {
    return this.getToken(AgiilQueryParser.GREATERTHAN, 0);
};

ComparisonContext.prototype.LESSTHAN = function() {
    return this.getToken(AgiilQueryParser.LESSTHAN, 0);
};

ComparisonContext.prototype.GREATERTHANOREQUAL = function() {
    return this.getToken(AgiilQueryParser.GREATERTHANOREQUAL, 0);
};

ComparisonContext.prototype.LESSTHANOREQUAL = function() {
    return this.getToken(AgiilQueryParser.LESSTHANOREQUAL, 0);
};

ComparisonContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitComparison(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.ComparisonContext = ComparisonContext;

AgiilQueryParser.prototype.comparison = function() {

    var localctx = new ComparisonContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, AgiilQueryParser.RULE_comparison);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AgiilQueryParser.GREATERTHAN) | (1 << AgiilQueryParser.LESSTHAN) | (1 << AgiilQueryParser.GREATERTHANOREQUAL) | (1 << AgiilQueryParser.LESSTHANOREQUAL))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ValueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AgiilQueryParser.RULE_value;
    return this;
}

ValueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ValueContext.prototype.constructor = ValueContext;

ValueContext.prototype.constantvalue = function() {
    return this.getTypedRuleContext(ConstantvalueContext,0);
};

ValueContext.prototype.functioninvocation = function() {
    return this.getTypedRuleContext(FunctioninvocationContext,0);
};

ValueContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AgiilQueryVisitor ) {
        return visitor.visitValue(this);
    } else {
        return visitor.visitChildren(this);
    }
};




AgiilQueryParser.ValueContext = ValueContext;

AgiilQueryParser.prototype.value = function() {

    var localctx = new ValueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 24, AgiilQueryParser.RULE_value);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 99;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
        switch(la_) {
        case 1:
            this.state = 97;
            this.constantvalue();
            break;

        case 2:
            this.state = 98;
            this.functioninvocation();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
